# ice-t

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEX_T_MODERNIZATION_PLAN.md  LICENSE  README.md  RUNNER_SETUP_INSTRUCTIONS.md  configure_runners.sh  dev-requirements.in  dev-requirements.txt  fix_runner_labels.sh  pyproject.toml  requirements.in  requirements.txt  setup_ice_t_runners.sh  test-trigger-fail  test-trigger-now  test_ci_failure.py  tox.ini
.codex/metrics/: .gitkeep  ci-metrics.jsonl
.cursor/: mcp.json
.cursor/rules/: 000-mandatory-cursor-workflow.mdc  001-core-standards.mdc  002-python-best-practices.mdc  003-testing-standards.mdc  004-automated-workflows-cicd.mdc  004-ci-cd-protection.mdc  005-branch-naming.mdc  006-ai-agent-integration.mdc  007-security-standards.mdc  008-performance-optimization.mdc  009-task-tracking-modernization.mdc  012-ci-files.mdc
.cursor/rules/python/: type_hinting.mdc
.cursor/rules/testing/: unit_tests.mdc
.github/actions/setup-venv/: action.yml
.github/workflows/: alert-failure-log.yml  auto-merge.yml  ci-nightly.yml  ci-workflow-bypass.yml  collect-ci-metrics.yml  diagram-generation.yml  revert-on-failure.yml  save-failed-log.yml  test-logging-simple.yml  test-save-log.yml  turbo-ci-persistent-runners.yml
agents/: AGENTS.md
agents/charter/: AI_CHARTER.md
agents/conventions/: CODING_CONVENTIONS.md  TOOL_USAGE.md
agents/core/: 001-abundance-mindset.md  002-discoverable-codebase.md  003-quality-standards.md
agents/features/: 001-vertical-slice-architecture.md
agents/playbooks/: DEBUG_AND_FIX.md  FIX_BUG.md  IMPLEMENT_FEATURE.md  REFACTOR_CODE.md  UPDATE_DEPENDENCIES.md
docs/: CI_BYPASS_MECHANISM.md  CI_LOGGING_SYSTEM.md  CODACY_CURSOR_SETUP.md  ci_logging.md
scripts/: adaptive_test_runner.py  debug_ci.py  evaluate_auto_merge.py  fix_cursor_rules.py  generate_architecture_diagrams.py  generate_dependency_graphs.py  generate_workflow_diagrams.py  quick_fix_rules.py  setup_dependencies.sh  update_diagram_docs.py  validate_lockfiles.sh
scripts/diagnostics/: cursor_context_monitor.py  diagnose_runner_env.sh
scripts/maintenance/: generate_lockfiles.sh  runner_workspace_cleanup.sh  update_startup_scripts.sh  update_startup_system.sh
scripts/migration/: migrate_to_project_runners.sh  migrate_to_turbo_ci.sh
scripts/monitoring/: check_ci_status.sh  check_runner_status.sh  check_startup_currency.sh  send_failure_alert.py  startup_system_health.sh
scripts/runners/: configure_all_runners.sh  configure_runner_labels.sh  consolidate_runner_scripts.sh  create_optimal_runners.sh  fix_runners_simple.sh  restart_all_runners.sh  start_remaining_runners.sh
scripts/setup/: codex_setup_minimal.sh  codex_setup_script.sh  codex_setup_script_optimized.sh  codex_setup_simplified.sh  codex_setup_ultra_minimal.sh  codex_startup.sh  enable-auto-merge.sh  setup_env.sh  setup_pre_commit.sh  setup_runner_safe.sh
scripts/temp_runner_repair/: reactivate_existing_runners.sh  reconfigure_existing_runners.sh  reconnect_to_github_runners.sh  restore_project_runners.sh  setup_missing_runners.sh  setup_new_runners.sh  start_existing_runners.sh
scripts/testing/: test_optimized_runners.sh  test_runner_setup.sh  test_venv_setup.sh
scripts/utilities/: codex_commands.sh  optimize_context.py  repository_cleanup.sh  trigger_ci_bypass.sh  verify_codacy_mcp_setup.sh
scripts/validation/: check_codex_compatibility.py  validate_manual_startup.sh
src/ice_t/: __init__.py
src/ice_t.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ice_t/core/: __init__.py
src/ice_t/features/: __init__.py
src/ice_t/integrations/: __init__.py
src/ice_t/utilities/: __init__.py
tests/: conftest.py  groups.json  test_ci_logging.py  test_ci_logging_verification.py  test_ci_trigger.py  test_trigger_ci_logging.py
tests/api/: test_placeholder.py
tests/ci/: test_workflow_yaml.py
tests/core/: test_core.py  test_metadata.py
tests/features/: test_features.py
tests/integration/: test_sample.py
tests/scripts/: test_diagram_generation.py
tests/smoke/: test_basic.py
tests/utils/: test_adaptive_runner.py  test_ci_log_summary.py  test_pre_commit_helpers.py  test_utils.py
tools/: ci_log_summary.py  pre_commit_helpers.py
